Version 0.10.3
------------------------------------------------------------------------------
New functions:
* `typical_value()`, to return the typical value of a variable.

Changes to functions:
* Computation of `r2()` for `glm`-objects is now based on log-Likelihood methods and also accounts for count models.
* Better `print()`-method for `overdisp()`.
* `overdisp()` now supports `glmmTMB`-objects.
* `boot_ci()` also displays CI based on sample quantiles.

Version 0.10.2
------------------------------------------------------------------------------
Changes to functions:
* `icc()`, `re_var()` and `get_re_var()` now support `glmmTMB`-objects.
* `pred_accuracy()` now also reports the standard error of accuracy, and gets a print-method.

Bug fixes:
* `pred_accuracy()` with cross-validation-method did not correctly account for the generated test data.
* Fixed issue with calculation in `smpsize_lmm()` and `se_ybar()`.

Version 0.10.1
------------------------------------------------------------------------------
General:

* Revised imports: Labelled data functions from package *sjmisc* have been moved to package *sjlabelled*.

New functions:
* `boot_est()` to return the estimate from bootstrap replicates.

Changes to functions:
* The `print()`-method for `svyglm.nb()`-objects now also prints confidence intervals.

Bug fixes:
* `se()` did not work for `icc()`-objects, when the mixed model had more than one random effect term.

Version 0.10.0
------------------------------------------------------------------------------
New functions:
* `cv_error()` and `cv_compare()` to compute the root mean squared error for test and training data from cross-validation.
* `props()` to calculate proportions in a vector, supporting multiple logical statements.
* `or_to_rr()` to convert odds ratio estimates into risk ratio estimates.
* `mn()`, `md()` and `sm()` to calculate mean, median or sum of a vector, but using `na.rm = TRUE` as default.