@@ -30,6 +30,7 @@ S3method(wtd_sd,matrix)
 S3method(wtd_se,data.frame)
 S3method(wtd_se,default)
 S3method(wtd_se,matrix)
+export(anova_stats)
 export(autocorrelation)
 export(boot_ci)
 export(boot_est)
@@ -53,7 +54,6 @@ export(heteroskedastic)
 export(hoslem_gof)
 export(icc)
 export(inequ_trend)
-export(levene_test)
 export(md)
 export(mean_n)
 export(mic)
@@ -63,6 +63,7 @@ export(multicollin)
 export(mwu)
 export(normality)
 export(odds_to_rr)
+export(omega_sq)
 export(or_to_rr)
 export(outliers)
 export(overdisp)
@@ -145,6 +146,7 @@ importFrom(sandwich,vcovHC)
 importFrom(sjlabelled,as_numeric)
 importFrom(sjlabelled,get_label)
 importFrom(sjlabelled,get_labels)
+importFrom(sjmisc,add_columns)
 importFrom(sjmisc,is_empty)
 importFrom(sjmisc,is_num_fac)
 importFrom(sjmisc,recode_to)
@@ -152,7 +154,6 @@ importFrom(sjmisc,remove_var)
 importFrom(sjmisc,std)
 importFrom(sjmisc,str_contains)
 importFrom(stats,anova)
-importFrom(stats,aov)
 importFrom(stats,as.formula)
 importFrom(stats,binomial)
 importFrom(stats,chisq.test)
@@ -179,7 +180,6 @@ importFrom(stats,na.omit)
 importFrom(stats,na.pass)
 importFrom(stats,nobs)
 importFrom(stats,pchisq)
-importFrom(stats,pf)
 importFrom(stats,pnorm)
 importFrom(stats,predict)
 importFrom(stats,predict.glm)
@@ -194,7 +194,6 @@ importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(stats,shapiro.test)
 importFrom(stats,sigma)
-importFrom(stats,summary.lm)
 importFrom(stats,terms)
 importFrom(stats,update)
 importFrom(stats,var)
@@ -203,7 +202,9 @@ importFrom(stats,weights)
 importFrom(stats,wilcox.test)
 importFrom(stats,xtabs)
 importFrom(tibble,add_column)
+importFrom(tibble,add_row)
 importFrom(tibble,as_tibble)
+importFrom(tibble,has_name)
 importFrom(tibble,rownames_to_column)
 importFrom(tibble,tibble)
 importFrom(tidyr,gather_)
