@@ -39,68 +39,3 @@ table_values <- function(tab, digits = 2) {
                            col = tab.col,
                            expected = tab.expected)))
 }
-
-
-#' @title Levene-Test for One-Way-Anova
-#' @name levene_test
-#'
-#' @description Plot results of Levene's Test for Equality of Variances for One-Way-Anova.
-#'
-#' @param depVar Dependent variable.
-#' @param grpVar Grouping (independent) variable, as unordered factor.
-#'
-#' @examples
-#' data(efc)
-#' levene_test(efc$c12hour, efc$e42dep)
-#'
-#' @export
-levene_test <- function(depVar, grpVar) {
-  # check if grpVar is factor
-  if (!is.factor(grpVar)) grpVar <- factor(grpVar)
-  # remove missings
-  df <- stats::na.omit(data.frame(depVar, grpVar))
-  # calculate means
-  means <- tapply(df$depVar, df$grpVar, mean)
-  depVarNew <- abs(df$depVar - means[df$grpVar])
-  message("\nLevene's Test for Homogeneity of Variances\n------------------------------------------")
-  fit <- aov(depVarNew ~ df$grpVar)
-  print(summary(fit))
-  pval <- summary(fit)[[1]]['Pr(>F)'][1,1]
-  # print "summary" of test
-  message("\nConclusion:")
-  if (pval > 0.05) {
-    message("Groups are homogeneous. Everything's fine.\n")
-  } else {
-    message("Groups are not homogeneous!\n")
-  }
-}
-
-
-# retrieve variance of random intercepts
-# and residuals
-lmer_var <- function(fit) {
-  reva <- summary(fit)$varcor
-  # retrieve only intercepts
-  vars <- unlist(lapply(reva, function(x) x[[1]]))
-  names(vars) <- names(reva)
-  # residual variances
-  if (inherits(fit, "glmerMod")) {
-    # for logistic models, we use pi / 3
-    resid_var <- (pi^2) / 3
-  } else {
-    # for linear models, we have a clear
-    # residual variance
-    resid_var <- attr(reva, "sc")^2
-  }
-  return(list('Between group variance' = vars,
-              'Within group variance' = resid_var))
-}
-
-
-#' @importFrom stats pf
-lm_pval_fstat <- function(x) {
-  if (!inherits(x, "lm")) stop("Not an object of class `lm`.", call. = F)
-  f <- summary(x)$fstatistic
-  p <- stats::pf(f[1], f[2], f[3], lower.tail = F)
-  return(as.vector(p))
-}
