@@ -2,6 +2,8 @@ Version 0.10.3
 ------------------------------------------------------------------------------
 New functions:
 * `typical_value()`, to return the typical value of a variable.
+* `eta_sq()` and `omega_sq()` to compute (partial) eta-squared or omega-squared statistics for anova tables.
+* `anova_stats()` to compute a complete model summary, including (partial) eta-squared and omega-squared statistics for anova tables, returned as tidy data frame.
 
 Changes to functions:
 * Computation of `r2()` for `glm`-objects is now based on log-Likelihood methods and also accounts for count models.
